[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "rate-limiter"
version = "0.1.0"
description = "A Python library for rate limiting using the token bucket algorithm, with support for synchronous and asynchronous operations."
readme = "README.md"
requires-python = ">=3.10"
license = {file = "LICENSE"}
authors = [{name = "Limin Ma"}]

keywords = [
    "rate",
    "limit",
    "limiter",
    "token bucket",
    "asyncio",
    "throttle",
    "ratelimit"
]

classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: System :: Networking",
    "Framework :: AsyncIO",
]

# dependencies = [
#
# ]

[project.urls]
Homepage = "https://github.com/liminma/rate-limiter"  # TODO: Update this URL
Repository = "https://github.com/liminma/rate-limiter" # TODO: Update this URL